[gd_scene load_steps=5 format=3 uid="uid://cdkdrhhls4ett"]

[ext_resource type="Script" uid="uid://bdwyrbafyde67" path="res://client/match.gd" id="1_7sg6s"]
[ext_resource type="Script" uid="uid://c7k60i74e2cu2" path="res://common/rpc.gd" id="2_h1q33"]
[ext_resource type="Theme" uid="uid://c8e6glxqn6suj" path="res://assets/theme.tres" id="3_h1q33"]
[ext_resource type="PackedScene" uid="uid://dtaf5jyt5pdui" path="res://client/card.tscn" id="3_ix7t0"]

[node name="Main" type="Node"]

[node name="Matches" type="Node" parent="."]

[node name="Match" type="Node" parent="Matches"]
script = ExtResource("1_7sg6s")

[node name="RPC" type="Node" parent="Matches/Match"]
script = ExtResource("2_h1q33")

[node name="UI" type="Control" parent="Matches/Match"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h1q33")

[node name="Background" type="ColorRect" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92941177, 0.7411765, 0.44705883, 1)

[node name="Status" type="Label" parent="Matches/Match/UI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.72200006
anchor_right = 1.0
offset_left = -827.7441
offset_top = 4.0
offset_right = -836.0
offset_bottom = 27.0
grow_horizontal = 2
theme = ExtResource("3_h1q33")
theme_override_font_sizes/font_size = 24
text = "Your turn"

[node name="ID" type="Label" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.72200006
anchor_right = 1.0
offset_left = 0.2559204
offset_top = 8.0
offset_right = -8.0
offset_bottom = 31.0
grow_horizontal = 2
theme = ExtResource("3_h1q33")
text = "id"
horizontal_alignment = 2

[node name="Player1" type="Control" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h1q33")

[node name="Name" type="Label" parent="Matches/Match/UI/Player1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.72200006
anchor_right = 1.0
offset_left = 0.2559204
offset_top = 31.995972
offset_right = -8.0
offset_bottom = 54.99597
grow_horizontal = 2
theme = ExtResource("3_h1q33")
text = "player 1"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Matches/Match/UI/Player1"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -215.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_h1q33")
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Cards" type="HBoxContainer" parent="Matches/Match/UI/Player1/MarginContainer"]
layout_mode = 2
theme = ExtResource("3_h1q33")
alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Card1" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card2" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card3" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card4" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card5" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card6" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card7" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card8" parent="Matches/Match/UI/Player1/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Player2" type="Control" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_h1q33")

[node name="Name" type="Label" parent="Matches/Match/UI/Player2"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -84.0
offset_top = 440.0
offset_right = 296.0
offset_bottom = -185.0
grow_horizontal = 0
grow_vertical = 2
rotation = -1.5707964
theme = ExtResource("3_h1q33")
text = "player 2"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Matches/Match/UI/Player2"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = 440.0
offset_right = 323.0
offset_bottom = -151.0
grow_horizontal = 0
grow_vertical = 2
rotation = -1.5707964

[node name="Cards" type="HBoxContainer" parent="Matches/Match/UI/Player2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
alignment = 1
metadata/_edit_lock_ = true

[node name="Card1" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card2" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card3" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card4" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card5" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card6" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card7" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card8" parent="Matches/Match/UI/Player2/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Player3" type="Control" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("3_h1q33")

[node name="Name" type="Label" parent="Matches/Match/UI/Player3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 384.0
offset_top = 51.0
offset_right = -384.0
offset_bottom = 74.0
grow_horizontal = 2
theme = ExtResource("3_h1q33")
text = "player 3"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Matches/Match/UI/Player3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 383.0
offset_right = -384.0
offset_bottom = 57.0
grow_horizontal = 2

[node name="Cards" type="HBoxContainer" parent="Matches/Match/UI/Player3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
alignment = 1

[node name="Card1" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card2" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card3" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card4" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card5" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card6" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card7" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card8" parent="Matches/Match/UI/Player3/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Player4" type="Control" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = ExtResource("3_h1q33")

[node name="Name" type="Label" parent="Matches/Match/UI/Player4"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 84.0
offset_top = 57.0
offset_right = 464.0
offset_bottom = -568.0
grow_vertical = 2
rotation = 1.5707964
theme = ExtResource("3_h1q33")
text = "player 4"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Matches/Match/UI/Player4"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 57.0
offset_right = 437.0
offset_bottom = -534.0
grow_vertical = 2
rotation = 1.5707964

[node name="Cards" type="HBoxContainer" parent="Matches/Match/UI/Player4/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_h1q33")
alignment = 1
metadata/_edit_lock_ = true

[node name="Card1" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card2" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card3" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card4" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card5" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card6" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card7" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card8" parent="Matches/Match/UI/Player4/MarginContainer/Cards" instance=ExtResource("3_ix7t0")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Pot" type="Control" parent="Matches/Match/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -409.0
offset_top = -240.0
offset_right = -93.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h1q33")

[node name="Card1" parent="Matches/Match/UI/Pot" instance=ExtResource("3_ix7t0")]
layout_mode = 0
offset_left = 108.0
offset_top = 155.0
offset_right = 208.0
offset_bottom = 302.0
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card2" parent="Matches/Match/UI/Pot" instance=ExtResource("3_ix7t0")]
layout_mode = 0
offset_left = 216.0
offset_top = 81.0
offset_right = 316.0
offset_bottom = 228.0
card = "none"
metadata/_edit_lock_ = true

[node name="Card3" parent="Matches/Match/UI/Pot" instance=ExtResource("3_ix7t0")]
layout_mode = 0
offset_left = 108.0
offset_right = 208.0
offset_bottom = 147.0
card = "none"
metadata/_edit_lock_ = true

[node name="Card4" parent="Matches/Match/UI/Pot" instance=ExtResource("3_ix7t0")]
layout_mode = 0
offset_top = 81.0
offset_right = 100.0
offset_bottom = 228.0
card = "none"
metadata/_edit_lock_ = true

[node name="Draw" parent="Matches/Match/UI" instance=ExtResource("3_ix7t0")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 239.0
offset_top = -159.0
offset_right = 339.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h1q33")
disabled = true

[node name="New" parent="Matches/Match/UI" instance=ExtResource("3_ix7t0")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -95.0
offset_right = 139.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h1q33")
disabled = true
card = "none"

[node name="GameOver" type="Label" parent="Matches/Match/UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_h1q33")
theme_override_colors/font_outline_color = Color(0.9079417, 0.9079417, 0.90794164, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 160
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="Matches/Match/UI/GameOver"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 156.0
offset_bottom = 75.0
text = "Menu"

[connection signal="pressed" from="Matches/Match/UI/GameOver/Menu" to="Matches/Match" method="_on_menu_pressed"]
